reports: CLIP: fixed the separators between some of the order list filters being too big.

--- a/frontend/app/reports/assets/main.css
+++ b/frontend/app/reports/assets/main.css
@@ -317,6 +317,9 @@
   width: 275px;
   margin-right: 15px;
 }
+.reports-2-orders-filter .form-group > .radio:first-child {
+  margin-top: 0;
+}
 .reports-2-orders-filter .radio + .checkbox {
   margin-top: 5px;
 }
